2010-09-27  Vadim Kurland  <vadim@vk.crocodile.org>

	* src/gui/Tutorial/introduction/html/page0.html: refs #1737 Added
	"Quick Start Guide" tutorial that demonstrates basic features and
	key concepts of Firewall Builder. The tutorial is accessible
	via Help / Tutorials menu and is shown to the first-time user
	on the GUI startup instead of the "tip of the day" dialog.

	* FWObjectPropertiesFactory.cpp (getObjectPropertiesDetailed):
	system folders in the tree now have tooltips that explain what
	kind of objects belong there.

	* RuleSetView.cpp (showToolTip): Added text to the tooltips shown
	for the "Direction" and "Action" rule elements to remind user that
	to change these rule parameters they need to click right mouse
	button to open list of possible settings

	* RuleSetView.cpp (showToolTip): fixed #1744 "Add tooltip to the
	rule number". The column in the RuleSetView? where rule number is
	shown now has a tooltip to remind the user that they can click
	right mouse button to the the context menu and use keyboard
	shortcut "x" to compile the rule

	* FWBSettings.cpp (init): fixed #1743 "change default for the
	option 'Show text descriptions for direction and action'". The
	option should be on by default.

	* RuleSetView.cpp (showToolTip): fixed #1730 "Add background help
	text and images to empty policy window". Showing tooltip in the
	empty space in the rule set view, this tooltip provides hints on
	how to edit rules which should be useful for the beginners.

2010-09-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
	fixed #1741 "there is no way to undelete a library object".

	* FWCmdMoveObject.cpp (FWCmdMoveObject::notify): fixed #1740
	"Deleted library remains in the drop-down list". If option "Show
	deleted objects" was turned off in the Preferences dialog and user
	deleted a library, it remained in the drop-down list of libraries